--- a/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
@@ -111,23 +111,24 @@
     <Compile Include="Csv\Command\LoadPatientPharmacyExtractCsvCommand.cs" />
     <Compile Include="Csv\Command\LoadPatientStatusExtractCsvCommand.cs" />
     <Compile Include="Csv\Command\LoadPatientVisitExtractCsvCommand.cs" />
-    <Compile Include="Data\Command\LoadEmrExtractCommand.cs" />
-    <Compile Include="Data\Command\SyncPatientArtExtractDbCommand.cs" />
-    <Compile Include="Data\Command\SyncPatientBaselinesExtractDbCommand.cs" />
-    <Compile Include="Data\Command\SyncFacilityDbCommand.cs" />
-    <Compile Include="Data\Command\SyncPatientLaboratoryExtractDbCommand.cs" />
-    <Compile Include="Data\Command\SyncPatientPharmacyExtractDbCommand.cs" />
-    <Compile Include="Data\Command\SyncPatientStatusExtractDbCommand.cs" />
-    <Compile Include="Data\Command\SyncPatientVisitExtractDbCommand.cs" />
-    <Compile Include="Data\Command\SyncPatientExtractDbCommand.cs" />
+    <Compile Include="Data\Command\ClearExtractsCommand.cs" />
+    <Compile Include="Data\Command\LoadExtractCommand.cs" />
+    <Compile Include="Data\Command\SyncPatientArtExtractCommand.cs" />
+    <Compile Include="Data\Command\SyncPatientBaselinesExtractCommand.cs" />
+    <Compile Include="Data\Command\SyncFacilityCommand.cs" />
+    <Compile Include="Data\Command\SyncPatientLaboratoryExtractCommand.cs" />
+    <Compile Include="Data\Command\SyncPatientPharmacyExtractCommand.cs" />
+    <Compile Include="Data\Command\SyncPatientStatusExtractCommand.cs" />
+    <Compile Include="Data\Command\SyncPatientVisitExtractCommand.cs" />
+    <Compile Include="Data\Command\SyncPatientExtractCommand.cs" />
     <Compile Include="Data\DwapiRemoteContext.cs" />
-    <Compile Include="Data\Command\LoadPatientArtExtractDbCommand.cs" />
-    <Compile Include="Data\Command\LoadPatientBaselinesExtractDbCommand.cs" />
-    <Compile Include="Data\Command\LoadPatientLaboratoryExtractDbCommand.cs" />
-    <Compile Include="Data\Command\LoadPatientPharmacyExtractDbCommand.cs" />
-    <Compile Include="Data\Command\LoadPatientStatusExtractDbCommand.cs" />
-    <Compile Include="Data\Command\LoadPatientVisitExtractDbCommand.cs" />
-    <Compile Include="Data\Command\LoadPatientExtractDbCommand.cs" />
+    <Compile Include="Data\Command\LoadPatientArtExtractCommand.cs" />
+    <Compile Include="Data\Command\LoadPatientBaselinesExtractCommand.cs" />
+    <Compile Include="Data\Command\LoadPatientLaboratoryExtractCommand.cs" />
+    <Compile Include="Data\Command\LoadPatientPharmacyExtractCommand.cs" />
+    <Compile Include="Data\Command\LoadPatientStatusExtractCommand.cs" />
+    <Compile Include="Data\Command\LoadPatientVisitExtractCommand.cs" />
+    <Compile Include="Data\Command\LoadPatientExtractCommand.cs" />
     <Compile Include="Data\Command\SyncCommand.cs" />
     <Compile Include="Data\Repository\ProjectRepository.cs" />
     <Compile Include="Data\Repository\ExtractSettingRepository.cs" />
