--- a/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
+++ b/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
@@ -53,8 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\ExtractStatus.cs" />
     <Compile Include="Interfaces\Commands\ILoadCsvExtractCommand.cs" />
+    <Compile Include="Interfaces\Commands\IClearExtractsCommand.cs" />
     <Compile Include="Interfaces\Commands\ISyncFacilityCommand.cs" />
     <Compile Include="Interfaces\Commands\ISyncPatientVisitExtractCommand.cs" />
     <Compile Include="Interfaces\Commands\ISyncPatientStatusExtractCommand.cs" />
@@ -120,6 +120,8 @@
     <Compile Include="Model\DTO\ClientPatientVisitExtractDTO.cs" />
     <Compile Include="Model\ExtractSetting.cs" />
     <Compile Include="Model\EMR.cs" />
+    <Compile Include="Model\RunSummary.cs" />
+    <Compile Include="Model\SyncSummary.cs" />
     <Compile Include="Model\Project.cs" />
     <Compile Include="Model\Profile\ClientExtractProfile.cs" />
     <Compile Include="Model\Profile\ClientPatientARTProfile.cs" />
@@ -145,6 +147,7 @@
     <Compile Include="Model\Source\TempPatientStatusExtract.cs" />
     <Compile Include="Model\Source\TempPatientVisitExtract.cs" />
     <Compile Include="Model\Source\TempPatientExtract.cs" />
+    <Compile Include="Model\LoadSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SyncService.cs" />
   </ItemGroup>
