--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Csv\Command\LoadPatientVisitExtractCsvCommandTests.cs" />
     <Compile Include="Csv\Command\LoadPatientArtExtractCsvCommandTests.cs" />
     <Compile Include="Csv\Command\LoadPatientExtractCsvCommandTests.cs" />
+    <Compile Include="Data\Command\ClearExtractsCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientArtExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientBaselinesExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientExtractDbCommandTests.cs" />
