--- a/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
+++ b/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
@@ -149,9 +149,21 @@
       <Project>{6DFA67BB-56B7-4695-98F3-B2AD83B09845}</Project>
       <Name>PalladiumDwh.ClientReader.Infrastructure</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PalladiumDwh.ClientUploader.Core\PalladiumDwh.ClientUploader.Core.csproj">
+      <Project>{E1EE232F-1977-4E72-98D6-7A088B201D38}</Project>
+      <Name>PalladiumDwh.ClientUploader.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PalladiumDwh.ClientUploader.Infrastructure\PalladiumDwh.ClientUploader.Infrastructure.csproj">
+      <Project>{335b20e1-fd2a-48ec-9376-9f294aaef75d}</Project>
+      <Name>PalladiumDwh.ClientUploader.Infrastructure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PalladiumDwh.Shared.Data\PalladiumDwh.Shared.Data.csproj">
       <Project>{AE9E2E4A-0F4D-4CA1-9EBB-9EEC7AA209CC}</Project>
       <Name>PalladiumDwh.Shared.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PalladiumDwh.Shared\PalladiumDwh.Shared.csproj">
+      <Project>{50ED08E8-8FEA-4C87-B265-E39DAEA4B480}</Project>
+      <Name>PalladiumDwh.Shared</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
