--- a/PalladiumDwh.DWapi.Tests/PalladiumDwh.DWapi.Tests.csproj
+++ b/PalladiumDwh.DWapi.Tests/PalladiumDwh.DWapi.Tests.csproj
@@ -133,6 +133,7 @@
     <Compile Include="PatientArtControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestHelpers.cs" />
+    <Compile Include="TestInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
