moved logs to documnets folder

--- a/PalladiumDwh.ClientApp/log4net.config
+++ b/PalladiumDwh.ClientApp/log4net.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <log4net>
   <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
-    <file type="log4net.Util.PatternString" value="logs\" />
+    <file type="log4net.Util.PatternString" value="${USERPROFILE}\My Documents\DWapi\logs\" />
     <datePattern value="yyyy-MMM-dd'.log'" />
     <staticLogFileName value="false" />
     <appendToFile value="true" />
