--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
@@ -1,13 +1,13 @@
 <connectionStrings>
   <add
     name="DWAPIRemote"
-    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True"
+    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient" 
     />
    
   <add
     name="EMRDatabase"
-    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=IQTools_Test;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True"
+    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=IQTools_Test;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
     />
   <add
