--- a/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
+++ b/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Presenters\IDashboardPresenter.cs" />
     <Compile Include="Presenters\IOptionPresenter.cs" />
     <Compile Include="Presenters\IPresenter.cs" />
+    <Compile Include="Presenters\IStartupPresenter.cs" />
     <Compile Include="Presenters\OptionPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -123,6 +124,7 @@
     <Compile Include="Views\IFeedBackView.cs" />
     <Compile Include="Views\IDashboardView.cs" />
     <Compile Include="Views\IOptionView.cs" />
+    <Compile Include="Views\IStartupView.cs" />
     <Compile Include="Views\IView.cs" />
     <Compile Include="Views\Options.cs">
       <SubType>Form</SubType>
