--- a/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
@@ -194,6 +194,10 @@
     <Compile Include="Migrations\201702131225273_ExtractSettingPriority.Designer.cs">
       <DependentUpon>201702131225273_ExtractSettingPriority.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702131436354_ExtractQueueStatus.cs" />
+    <Compile Include="Migrations\201702131436354_ExtractQueueStatus.Designer.cs">
+      <DependentUpon>201702131436354_ExtractQueueStatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -236,6 +240,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702131225273_ExtractSettingPriority.resx">
       <DependentUpon>201702131225273_ExtractSettingPriority.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702131436354_ExtractQueueStatus.resx">
+      <DependentUpon>201702131436354_ExtractQueueStatus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\EMR.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
