--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
@@ -1,5 +1,10 @@
 <connectionStrings>
   <add
+   name="DWAPIRemote"
+   connectionString="Server=192.168.43.168;Port=3306;Database=DWAPIRemote;Uid=pacs;Pwd=pacs;convert zero datetime=True"
+   providerName="MySql.Data.MySqlClient"/>
+   
+  <!--<add
     name="DWAPIRemote"
     connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient" 
@@ -19,6 +24,6 @@
     name="PostgreSQLEMRDatabase"
     connectionString="Server=127.0.0.1;Port=5432;Database=hmis;User Id=postgres;Password=postgres;"
     providerName="Npgsql"
-    /> 
+    />--> 
 
 </connectionStrings>
