--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
+  <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net46" />
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net46" />
   <package id="NMemory" version="1.1.2" targetFramework="net46" />
