--- a/PalladiumDwh.ClientReader.Infrastructure/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Extensions.Logging" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
+  <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net46" />
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net46" />
   <package id="Npgsql" version="3.2.0" targetFramework="net46" />
