prep for development

--- a/PalladiumDwh.ClientApp/App.config
+++ b/PalladiumDwh.ClientApp/App.config
@@ -23,10 +23,10 @@
   <applicationSettings>
     <PalladiumDwh.ClientApp.Properties.Settings>
       <setting name="devMode" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="dwapiUrl" serializeAs="String">
-        <value>http://localhost/dwapi/api</value>
+        <value>http://data.kenyahmis.org:81/dwapi/api</value>
       </setting>
     </PalladiumDwh.ClientApp.Properties.Settings>
   </applicationSettings>
