--- a/PalladiumDwh.ClientApp/Properties/Settings.settings
+++ b/PalladiumDwh.ClientApp/Properties/Settings.settings
@@ -3,10 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="devMode" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="dwapiUrl" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://localhost/dwapi/api</Value>
+      <Value Profile="(Default)">http://data.kenyahmis.org:81/dwapi/api</Value>
     </Setting>
   </Settings>
 </SettingsFile>
