--- a/PalladiumDwh.ClientApp/packages.config
+++ b/PalladiumDwh.ClientApp/packages.config
@@ -4,4 +4,5 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
   <package id="StructureMap" version="4.4.2" targetFramework="net46" />
+  <package id="System.Net.Http.Extensions.Compression.Client" version="2.0.5" targetFramework="net46" />
 </packages>
