--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
@@ -2,10 +2,16 @@
  
   <add
     name="DWAPIRemote"
-    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
-    providerName="System.Data.SqlClient" 
+    connectionString="Server=192.168.1.173;Port=3306;Database=dwapiremoteprod;Uid=pacs;Pwd=pacs;convert zero datetime=True"
+    providerName="MySql.Data.MySqlClient"
     />
-  <!-- 
+  <!--
+   <add
+    name="DWAPIRemote"
+   connectionString="Server=192.168.1.173;Port=3306;Database=dwapiremoteprod;Uid=root;Pwd=;convert zero datetime=True"
+    providerName="MySql.Data.MySqlClient"
+    />
+    
   <add
     name="EMRDatabase"
     connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=IQTools_Test;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
