--- a/PalladiumDwh.ClientApp/Properties/Settings.settings
+++ b/PalladiumDwh.ClientApp/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="dwapiUrl" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://data.kenyahmis.org:81/dwapi/api</Value>
+      <Value Profile="(Default)">http://localhost/dwapi/api</Value>
     </Setting>
   </Settings>
 </SettingsFile>
